--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: inherit;
 }
 
 .App-logo {
@@ -14,7 +15,6 @@
 }
 
 .App-header {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,14 +26,17 @@
   color: rgb(112, 76, 182);
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
+.divider {
+  border: 1px solid rgba(0, 0, 0, 0.21);
+}
+div.divider.horizontal {
+  width: 100%;
+}
+
+.absolute {
+  position: absolute;
+}
+
+div.absolute.bottom-0 {
+  bottom: 0;
 }
