--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   height: inherit;
+  width: inherit;
 }
 
 .App-logo {
@@ -27,10 +28,14 @@
 }
 
 .divider {
-  border: 1px solid rgba(0, 0, 0, 0.21);
-}
-div.divider.horizontal {
+  background-color: rgba(0, 0, 0, 0.21);
   width: 100%;
+  height: 0.5px;
+}
+
+div.divider.vertical {
+  height: 100%;
+  width: 0.5px;
 }
 
 .absolute {
