--- a/src/app/components/header/Header.css
+++ b/src/app/components/header/Header.css
@@ -1,12 +1,42 @@
 .header {
-    width: 100vw;
-    height: 90px;
+    height: 70px;
     position: relative;
     display: flex;
     align-items: center;
+    box-shadow: 0px 4px 5px rgba(12, 17, 60, 0.15);
 }
 
-.header-title {
-    font-size: 22px;
-    line-height: 26px;
+.header-menu {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    width: fit-content;
+}
+
+.notification-btn {
+    position: relative;
+    width: 30px;
+    height: 30px;
+}
+
+.notification-btn > .notification-count {
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 999;
+    border-radius: 50%;
+    background-color: #9B0021;
+    font-size: 10px;
+    font-weight: bold;
+    color: white;
+}
+
+.profile-btn {
+    width: 40px;
+    height: 40px;
+    margin-left: 13px;
+    border-radius: 50%;
+    background-color: #0C113C;
 }
