--- a/src/index.css
+++ b/src/index.css
@@ -6,18 +6,38 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(242,242,242);
+  background: linear-gradient(0deg, rgba(242,242,242,1) 76%, rgba(242,242,242,1) 76%, rgba(255,255,255,1) 100%);
+  /*background: rgb(242,242,242);*/
+  /*background: linear-gradient(0deg, rgba(242,242,242,1) 53%, rgba(255,255,255,1) 100%);*/
+  min-width: 1366px;
 
 }
 
 html, body {
   height: 100%;
+  width: 100%;
 }
 
 html, body > div {
   height: 100%;
+  width: 100%;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+p {
+  font-family: "Open Sans";
+  font-weight: bold ;
+  margin: 0px;
+  color: rgba(0, 0, 0, 0.68);
+  line-height: unset;
+}
+
+p > ins {
+  text-decoration: none;
+  font-weight: normal;
 }
