Connected tanks API to UI
Closes #6

--- a/src/app/components/tanklist/TankList.css
+++ b/src/app/components/tanklist/TankList.css
@@ -50,6 +50,7 @@
     font-weight: normal;
     font-size: 11px;
     line-height: 25px;
+    text-transform: uppercase;
 }
 
 .divider.card-divider {
