--- a/src/app/components/tanklist/TankList.css
+++ b/src/app/components/tanklist/TankList.css
@@ -7,12 +7,12 @@
 
 
 .card {
-    margin: 0 20px 20px 0;
-    background: #FFFFFF;
     width: auto;
     min-width: 220px;
-    max-width: 220px;
-    height: auto;
+    height: fit-content;
+    margin: 0 20px 20px 0;
+    background: #FFFFFF;
+    position: relative;
     box-shadow: 0px 4px 4px rgba(168, 168, 168, 0.25);
     border-radius: 15px;
 
@@ -64,7 +64,6 @@
 }
 
 .card > .footer {
-    background: #8D95B9;
     box-shadow: 0px 4px 4px rgba(168, 168, 168, 0.25);
     border-radius: 0 0 15px 15px;
     text-align: center;
@@ -75,6 +74,21 @@
     font-size: 13px;
     line-height: 18px;
     color: #ffffff;
+    text-transform: uppercase;
+}
+
+.card > .status-indicator {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 10px;
+    width: 16px;
+    height: 16px;
+    background-color: #47C74C;
+    border-radius: 50%;
+}
+.status-indicator.alert {
+    background-color: #E73434;
 }
 
 
